try to make url class loader work on windows